having performance and scrolling issues on mobile still, adding z-index

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -81,6 +81,7 @@ main {
   background-image: url(../assets/hero-pattern.svg);
   background-size: 500px;
   background-color: #f5f3f3;
+  z-index: -200;
 }
 
 .portfolio-container ul {
